Fix 404 Nginx Bug

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -14,12 +14,8 @@ upstream frontend {
 
     location / {
         proxy_pass http://frontend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        try_files $uri $uri/ /index.html;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 
 }
