--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   frontend:
     build: ./frontend
@@ -7,14 +6,30 @@ services:
     networks:
       - app-network
     restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`sierrapablo.dev`)"
+      - "traefik.http.routers.frontend.entrypoints=web,websecure"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
+    depends_on:
+      - proxy
 
   proxy:
-    build: ./proxy
+    image: traefik:latest
+    container_name: traefik
+    command:
+      - "--configFile=/etc/traefik/traefik.yml"
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      - frontend
+      - "8080:8080"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "./proxy/traefik.yml:/etc/traefik/traefik.yml"
+      - "./proxy/dynamic:/etc/traefik/dynamic"
+      - "./proxy/ssl:/etc/traefik/ssl"
+    labels:
+      - "traefik.enable=true"
     networks:
       - app-network
     restart: unless-stopped
