--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,21 @@
 services:
   frontend:
     build: ./frontend
+    container_name: frontend
     expose:
       - "80"
     networks:
       - app-network
     restart: unless-stopped
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`sierrapablo.dev`)"
-      - "traefik.http.routers.frontend.entrypoints=web,websecure"
-      - "traefik.http.services.frontend.loadbalancer.server.port=80"
-    depends_on:
-      - proxy
 
   proxy:
-    image: traefik:latest
-    container_name: traefik
-    command:
-      - "--configFile=/etc/traefik/traefik.yml"
+    build: ./proxy
+    container_name: reverse-proxy
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-      - "./proxy/traefik.yml:/etc/traefik/traefik.yml"
-      - "./proxy/dynamic:/etc/traefik/dynamic"
-      - "./proxy/ssl:/etc/traefik/ssl"
-    labels:
-      - "traefik.enable=true"
+    depends_on:
+      - frontend
     networks:
       - app-network
     restart: unless-stopped
